# home

./: .gitignore
sensors/: CMakeLists.txt  COIN_CELL_TEST.md  DEPLOYMENT_GUIDE.md  ESP-NOW_README.md  MESH_SYSTEM_OVERVIEW.md  ULP_SETUP_GUIDE.md  build_and_test.sh  dashboard.py  platformio.ini  temp_server.py  temperature_log copy.csv
sensors/src/: battery_transmitter.cpp  coin_cell_test.cpp  coin_cell_ulp.S  espnow_commander.cpp  espnow_receiver.cpp  main.cpp  recovery_test.cpp  recovery_transmitter.cpp  ulp_main.S  ulp_receiver.cpp  ulp_transmitter.cpp
sensors/templates/: dashboard.html
sensors/test/: test_thermistor.cpp
